# fast-cohen

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: release-rust.yml
src/: main.rs
