[package]
name = "fast-cohen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
csv = "1.2.1"
indicatif = "0.17.3"
num = "0.4.1"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0.96"

